--- a/irerero/irereroapp/templates/irereroapp/login.html
+++ b/irerero/irereroapp/templates/irereroapp/login.html
@@ -23,6 +23,7 @@
                                     <h4 class="text-center mb-4">Sign in to your account</h4>
                                     <form method="POST" action="{% url 'login' %}">
                                         {% csrf_token %}
+                                        <!-- Remove {{ form.as_p }} -->
                                         <div class="form-group">
                                             <label><strong>Email</strong></label>
                                             <input type="email" class="form-control" name="email" value="{{ request.POST.email }}" required>
@@ -39,13 +40,18 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <a href="{#}">Forgot Password?</a>
+                                                <a href="#">Forgot Password?</a>
                                             </div>
                                         </div>
                                         <div class="text-center">
                                             <button type="submit" class="btn btn-primary btn-block">Sign me in</button>
                                         </div>
                                     </form>
+                                    
+                                    {% for message in messages %}
+                                        <p style="color: red;">{{ message }}</p>
+                                    {% endfor %}
+
                                     <div class="new-account mt-3">
                                         <p>Don't have an account? <a class="text-primary" href="{% url 'register' %}">Sign up</a></p>
                                     </div>
