--- a/irerero/irereroapp/static/css/register_teacher.css
+++ b/irerero/irereroapp/static/css/register_teacher.css
@@ -4,7 +4,20 @@ General Reset and Layout
     padding: 0;
     box-sizing: border-box;
 }
-
+.header {
+    background-color: #ffffff; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+    padding: 30px 0; 
+    text-align: center; /* Center the content horizontally */
+    position: relative;
+    z-index: 1; /* Ensure the header is on top */
+  }
+  
+  /* Logo styles */
+  .header img {
+    max-width: 100px; /* Set a max width for the logo */
+    height: auto; /* Maintain aspect ratio */
+  }
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
