--- a/irerero/irereroapp/static/css/style.css
+++ b/irerero/irereroapp/static/css/style.css
@@ -1,59 +1,4 @@
-/*
-    Table of Contents
 
-    Name                 : Edumin
-    Author               : Dexignlabs
-    Author Portfolio     : https://themeforest.net/user/dexignlabs/portfolio
-    
-
-
-    Table of Sass Contents
-
-    1. Abstracts
-        _bs-custom
-        _inheritance
-        _maps
-        _mixin
-        _variable
-
-    2. bootstrap 
-        -Here goes all official bootstrap scss files
-
-    3. Global/Base
-        _color
-        _custom-grid
-        _fonts
-        _helper
-        _reset
-
-    4. layout
-        +footer
-        +header
-        +rtl
-        +sidebar
-        +tables
-        +theme
-        +version-dark
-
-    5. Conponents
-        +app
-        +charts
-        +forms
-        +map
-        +uc
-        +ui
-        +widget
-
-    6. Page
-        _index-1
-        _page-error
-        _page-register
-        _page-signin
-        _page-user-lock
-        _page-user-lock
-
-*/
-/*$primary  : #7356f1 !default;*/
 @import url("../../css.css");
 @import url("../../css-1.css");
 @import url("../../css-2.css");
@@ -69,6 +14,20 @@
 @import url(../vendor/aos/css/aos.min.css);
 @import url(../vendor/perfect-scrollbar/css/perfect-scrollbar.css);
 @import url(../vendor/metismenu/css/metisMenu.min.css);
+.header {
+  background-color: #ffffff; 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+  padding: 30px 0; 
+  text-align: center; /* Center the content horizontally */
+  position: relative;
+  z-index: 1; /* Ensure the header is on top */
+}
+
+/* Logo styles */
+.header img {
+  max-width: 100px; /* Set a max width for the logo */
+  height: auto; /* Maintain aspect ratio */
+}
 .gradient_one {
   background-image: linear-gradient(to right, rgba(186, 1, 181, 0.85) 0%, rgba(103, 25, 255, 0.85) 100%); }
 
