--- a/irerero/irereroapp/templates/irereroapp/homepage.html
+++ b/irerero/irereroapp/templates/irereroapp/homepage.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="{% url 'homepage' %}" class="nav_header">Home</a>
             <a href="{#}" class="nav_header">Class</a>
-            <a href="{#}" class="nav_header">Dashboard</a>
+            <a href="{% url 'add_class'%}" class="nav_header">Dashboard</a>
            
             <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Default Image" class="default-image">
         </nav>
@@ -42,7 +42,7 @@
 
 <!-- Featured Schools Section -->
 <section class="featured-schools">
-    <a href="{#}" class="cta-button">Start Attendance</a>
+    <a href="{%url 'attendance'%}" class="cta-button">Start Attendance</a>
     <a href="{#}" class="cta-button">Measure Health</a>
 <!-- 
     <div class="school-gallery">
