--- a/irerero/irereroapp/templates/irereroapp/login.html
+++ b/irerero/irereroapp/templates/irereroapp/login.html
@@ -12,6 +12,12 @@
 </head>
 
 <body class="h-100">
+    <div class="header">
+    <header>
+        <h1><a href="{% url 'homepage' %}"><img src="{% static 'media/irerero.png' %}" alt="logo image"></a></h1>
+        
+    </header>
+    </div>
     <div class="authincation h-100">
         <div class="container h-100">
             <div class="row justify-content-center h-100 align-items-center">
