--- a/irerero/irereroapp/templates/irereroapp/register_headteacher.html
+++ b/irerero/irereroapp/templates/irereroapp/register_headteacher.html
@@ -11,7 +11,12 @@
     <script src="{% static 'js/register.js' %}"></script>
 </head>
 <body>
-    
+    <div class="header">
+        <header>
+            <h1><a href="{% url 'homepage' %}"><img src="{% static 'media/irerero.png' %}" alt="logo image"></a></h1>
+            
+        </header>
+        </div>
     <form id="registrationForm" method="POST" action="/register/headteacher/">
         {% csrf_token %}
         <div class="form-container">
