--- a/irerero/irereroapp/templates/irereroapp/adminDashboard.html
+++ b/irerero/irereroapp/templates/irereroapp/adminDashboard.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
      
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
     <title>Admin Dashboard Panel</title>
 </head>
@@ -17,39 +17,44 @@
     <nav>
         <div class="logo-name">
             <div class="logo-image">
-               <img src="images/logo.png" alt="">
+               <img src="{% static 'media/Irerero.png' %}" alt="">
             </div>
 
-            <span class="logo_name">CodingLab</span>
+            <span class="logo_name">Irerero</span>
         </div>
 
         <div class="menu-items">
             <ul class="nav-links">
                 <li><a href="#">
                     <i class="uil uil-estate"></i>
-                    <span class="link-name">Dahsboard</span>
+                    <span class="link-name">Dashboard</span>
                 </a></li>
                 <li><a href="#">
-                    <i class="uil uil-files-landscapes"></i>
-                    <span class="link-name">Content</span>
+                    <i class="uil uil-book-reader"></i>
+                    <span class="link-name">Classes</span>
                 </a></li>
                 <li><a href="#">
-                    <i class="uil uil-chart"></i>
-                    <span class="link-name">Analytics</span>
+                    <i class="uil uil-users-alt"></i>
+                    <span class="link-name">Children</span>
                 </a></li>
                 <li><a href="#">
-                    <i class="uil uil-thumbs-up"></i>
-                    <span class="link-name">Like</span>
+                    <i class="uil uil-user-nurse"></i>
+                    <span class="link-name">Teachers</span>
                 </a></li>
                 <li><a href="#">
-                    <i class="uil uil-comments"></i>
-                    <span class="link-name">Comment</span>
+                    <i class="uil uil-user-plus"></i>
+                    <span class="link-name">Parents</span>
                 </a></li>
                 <li><a href="#">
-                    <i class="uil uil-share"></i>
-                    <span class="link-name">Share</span>
+                    <i class="uil uil-calendar-alt"></i>
+                    <span class="link-name">Attendance Records</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-heart-medical"></i>
+                    <span class="link-name">Health Metrics</span>
                 </a></li>
             </ul>
+            
             
             <ul class="logout-mode">
                 <li><a href="#">
@@ -85,84 +90,45 @@
                     <span class="text">Dashboard</span>
                 </div>
 
-                <div class="boxes">
+                <div class="boxes"style="gap: 20px">
                     <div class="box box1">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text">Total Likes</span>
-                        <span class="number">50,120</span>
+                        <i class="uil uil-books"></i>
+                        <span class="text">Total Classes</span>
+                        <span class="number">{{total_classes}}</span>
                     </div>
                     <div class="box box2">
-                        <i class="uil uil-comments"></i>
-                        <span class="text">Comments</span>
-                        <span class="number">20,120</span>
+                        <i class="uil uil-users-alt"></i>
+                        <span class="text">Total Children</span>
+                        <span class="number">{{total_children}}</span>
                     </div>
                     <div class="box box3">
-                        <i class="uil uil-share"></i>
-                        <span class="text">Total Share</span>
-                        <span class="number">10,120</span>
+                        <i class="uil uil-user"></i>
+                        <span class="text">Total Parents</span>
+                        <span class="number">{{total_parents}}</span>
                     </div>
                 </div>
+                <div class="boxes" style="gap: 20px; margin-top: 20px">
+                    <div class="box box1">
+                        <i class="uil uil-users-alt"></i> <!-- New Icon -->
+                        <span class="text">Total Users</span>
+                        <span class="number">{{total_users}}</span>
+                    </div>
+                    <div class="box box2">
+                        <i class="uil uil-building"></i> <!-- Icon for Schools -->
+                        <span class="text">Total Schools</span>
+                        <span class="number">{{total_schools}}</span>
+                    </div>
+                    <div class="box box3">
+                        <i class="uil uil-user-md"></i> <!-- New Icon for Headteachers -->
+                        <span class="text">Total Headteachers</span>
+                        <span class="number">{{total_headteachers}}</span>
+                    </div>
+                </div>
+                
+                
             </div>
 
-            <div class="activity">
-                <div class="title">
-                    <i class="uil uil-clock-three"></i>
-                    <span class="text">Recent Activity</span>
-                </div>
-
-                <div class="activity-data">
-                    <div class="data names">
-                        <span class="data-title">Name</span>
-                        <span class="data-list">Prem Shahi</span>
-                        <span class="data-list">Deepa Chand</span>
-                        <span class="data-list">Manisha Chand</span>
-                        <span class="data-list">Pratima Shahi</span>
-                        <span class="data-list">Man Shahi</span>
-                        <span class="data-list">Ganesh Chand</span>
-                        <span class="data-list">Bikash Chand</span>
-                    </div>
-                    <div class="data email">
-                        <span class="data-title">Email</span>
-                        <span class="data-list">premshahi@gmail.com</span>
-                        <span class="data-list">deepachand@gmail.com</span>
-                        <span class="data-list">prakashhai@gmail.com</span>
-                        <span class="data-list">manishachand@gmail.com</span>
-                        <span class="data-list">pratimashhai@gmail.com</span>
-                        <span class="data-list">manshahi@gmail.com</span>
-                        <span class="data-list">ganeshchand@gmail.com</span>
-                    </div>
-                    <div class="data joined">
-                        <span class="data-title">Joined</span>
-                        <span class="data-list">2022-02-12</span>
-                        <span class="data-list">2022-02-12</span>
-                        <span class="data-list">2022-02-13</span>
-                        <span class="data-list">2022-02-13</span>
-                        <span class="data-list">2022-02-14</span>
-                        <span class="data-list">2022-02-14</span>
-                        <span class="data-list">2022-02-15</span>
-                    </div>
-                    <div class="data type">
-                        <span class="data-title">Type</span>
-                        <span class="data-list">New</span>
-                        <span class="data-list">Member</span>
-                        <span class="data-list">Member</span>
-                        <span class="data-list">New</span>
-                        <span class="data-list">Member</span>
-                        <span class="data-list">New</span>
-                        <span class="data-list">Member</span>
-                    </div>
-                    <div class="data status">
-                        <span class="data-title">Status</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                        <span class="data-list">Liked</span>
-                    </div>
-                </div>
-            </div>
+           
         </div>
     </section>
 
